fix(webapp): SplitView is too broad on mobile devices so view can be outscrolled

--- a/packages/hubert/src/layout/Toolbar.module.scss
+++ b/packages/hubert/src/layout/Toolbar.module.scss
@@ -6,13 +6,11 @@
   background-color: rgb(var(--lotta-box-background-color));
   display: flex;
   position: sticky;
-  top: 0;
+  top: 48px;
   z-index: 1;
 
-  &:not(.hasScrollableParent) {
-    @media screen and (max-width: $max-xs) {
-      top: 48px;
-    }
+  &.hasScrollableParent {
+    top: 0px;
   }
 
   &.stackOnMobile {
@@ -23,9 +21,9 @@
     }
   }
 
-  &>div,
-  &>button,
-  &>span {
+  & > div,
+  & > button,
+  & > span {
     &:not(:first-child) {
       margin-left: var(--lotta-spacing);
     }
